todo-app/todo-backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todobackend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todobackend
  template:
    metadata:
      labels:
        app: todobackend
    spec:
      containers:
        - name: todobackend
          image: BACKEND/IMAGE
          imagePullPolicy: Always
          resources:
            requests:
              memory: "32Mi"
              cpu: "200m"
            limits:
              memory: "64Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /actuator/health/db
              port: 4040
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            initialDelaySeconds: 20 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
              path: /actuator/health/db
              port: 4040
