todo-app/todo-backend/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: project
  name: todo-backend-route
spec:
  parentRefs:
  - name: project-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /todos
    backendRefs:
    - name: todobackend-svc
      port: 80
